# termemoji

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_GUIDE.md  ai.py  build.py  build_release.py  character_select.py  characters.py  game_logic.py  install-windows.bat  lobby_screen.py  main.py  models.py  net_client.py  pyproject.toml  release.py  renderer.py  requirements-windows.txt  requirements.txt  server.py  setup.py  simple_char_select.py  test_char_select.py  test_lobby.py  utils.py
.github/workflows/: build.yml  release.yml  test.yml
termemoji-macos/: run-game.sh  run-server.sh
